// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="railFish"
          data-content="965fe321"
          fill="none"
          height="17.6580310880829"
          viewBox="0 0 23.16 17.04"
          width="24"
        />
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsRow"
      >
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
        <div
          class="settingsActions"
        >
          <div
            data-slot="sidebar.settings.action"
            style="display: contents;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          data-brand-wordmark="true"
          style="align-items: center; display: inline-flex; flex: 0 0 auto; gap: 10px; height: 24px; width: 141px;"
        >
          <svg
            aria-hidden="true"
            data-content="965fe321"
            fill="none"
            height="17.6580310880829"
            viewBox="0 0 23.16 17.04"
            width="24"
          />
          <span
            data-brand-dot-logo="true"
            style="background-color: currentcolor; display: block; flex: 0 0 auto; height: 14px; mask-image: url("data:image/png;fingerprint=772b376d"); mask-position: center; mask-repeat: no-repeat; mask-size: contain; -webkit-mask-image: url("data:image/png;fingerprint=772b376d"); -webkit-mask-position: center; -webkit-mask-repeat: no-repeat; -webkit-mask-size: contain; width: 48px;"
          />
          <span
            data-harness-badge="true"
            style="align-items: center; background-color: currentcolor; border-radius: 2px; display: inline-flex; flex: 0 0 auto; height: 14px; justify-content: center; width: 49px;"
          >
            <span
              style="color: var(--dsw-alias-label-primary-inverted, #fff); font-family: Arial, sans-serif; font-size: 6.5px; font-weight: 700; letter-spacing: 0px; line-height: 1;"
            >
              HARNESS
            </span>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New Session
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsRow"
      >
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
        <div
          class="settingsActions"
        >
          <div
            data-slot="sidebar.settings.action"
            style="display: contents;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          data-brand-wordmark="true"
          style="align-items: center; display: inline-flex; flex: 0 0 auto; gap: 10px; height: 24px; width: 141px;"
        >
          <svg
            aria-hidden="true"
            data-content="965fe321"
            fill="none"
            height="17.6580310880829"
            viewBox="0 0 23.16 17.04"
            width="24"
          />
          <span
            data-brand-dot-logo="true"
            style="background-color: currentcolor; display: block; flex: 0 0 auto; height: 14px; mask-image: url("data:image/png;fingerprint=772b376d"); mask-position: center; mask-repeat: no-repeat; mask-size: contain; -webkit-mask-image: url("data:image/png;fingerprint=772b376d"); -webkit-mask-position: center; -webkit-mask-repeat: no-repeat; -webkit-mask-size: contain; width: 48px;"
          />
          <span
            data-harness-badge="true"
            style="align-items: center; background-color: currentcolor; border-radius: 2px; display: inline-flex; flex: 0 0 auto; height: 14px; justify-content: center; width: 49px;"
          >
            <span
              style="color: var(--dsw-alias-label-primary-inverted, #fff); font-family: Arial, sans-serif; font-size: 6.5px; font-weight: 700; letter-spacing: 0px; line-height: 1;"
            >
              HARNESS
            </span>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新建会话"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="14"
        viewBox="0 0 16 16"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新会话
      </span>
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsRow"
      >
        <div
          class="settingsArea"
        >
          <div
            data-slot="sidebar.settings"
            style="display: contents;"
          />
        </div>
        <div
          class="settingsActions"
        >
          <div
            data-slot="sidebar.settings.action"
            style="display: contents;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
